simple-service.yml
apiVersion: v1
kind: Service
metadata:
  name: simple-service
spec:
  selector:
    app: simple-app
  ports:
    - protocol: TCP
      port: 8080
