simple-gateway.yml
# https://kubernetes.io/docs/concepts/services-networking/gateway/#api-kind-gateway
# https://gateway-api.sigs.k8s.io/guides/simple-gateway/
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: simple-gateway
spec:
  gatewayClassName: nginx
  listeners:
  - name: http
    protocol: HTTP
    port: 80
    allowedRoutes:
      namespaces:
        from: All
