simple-http-route.yml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: simple-route
spec:
  parentRefs:
    - name: simple-gateway
  rules:
    - backendRefs:
        - name: simple-service
          port: 8080
